fixed wrong padding on collapsible sidenav menus in mobile view

--- a/resources/assets/sass/components/_sideNav.scss
+++ b/resources/assets/sass/components/_sideNav.scss
@@ -175,7 +175,7 @@
     }
 
     a {
-      padding: 0 $sidenav-padding;
+      padding: 0 ($sidenav-padding * 2);
     }
 
     .userView {
